Use Oracle JDK7 on Travis
I've noticed this on other travis builds, openjdk7 segfaults.  Switching
to oraclejdk7 fixes this.

Also had to increase MaxPermSize for the scripted tests.